test-app/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - github-example.k8s.consolejs.net
      secretName: k8s-consolejs-net
  rules:
  # replace with your domain
  - host: "github-example.k8s.consolejs.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-service-svc
            port:
              number: 80
